# game-card-SDL3

./: CMakeLists.txt  README.md  main.cpp
src/include/SDL3/: SDL.h  SDL_assert.h  SDL_asyncio.h  SDL_atomic.h  SDL_audio.h  SDL_begin_code.h  SDL_bits.h  SDL_blendmode.h  SDL_camera.h  SDL_clipboard.h  SDL_close_code.h  SDL_copying.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_init.h  SDL_intrin.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_main_impl.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  (+40 more)
